# rust-chat-demo

./: .gitignore
api/: Cargo.toml
api/src/: main.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_components/Groceries/GroceriesContainer/: GroceriesContainer.tsx
frontend/src/app/groceries/: page.tsx
frontend/src/models/: GroceryList.tsx
frontend/src/services/: GroceriesApi.tsx
