[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tower-http = { version = "0.5.0", features = ["cors"] }
tokio = { version = "1.28", features = ["full", "macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
parking_lot = { version = "0.12.1", features = [] }